test/tests/errors/error-if-exp-ref-off2.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? (true ? "" : ref "") : (true ? 1 : ref 1);
}